--- a/login.html
+++ b/login.html
@@ -4,27 +4,29 @@
     <title> Welcome Page</title>
 
     <!--Bootstrap CSS-->
-
-    <link rel="stylesheet" href="css\Main.css">
     <link rel="stylesheet " href="bootstrap-4.4.1-dist\css\bootstrap.css">
+    <link rel="stylesheet" href="css\Main.css">
+
 
 </head>
 
 <body class="bg-overlay">
     <div class="container login-container">
         <div class="row d-flex justify-content-center">
-            <div class="col-md-5  col-xs-12 login-form-1">
+            <div class="col-md-5   login-form-1 d-none d-lg-block ">
+
                 <h1>Welcome</h1>
                 <p> Sign in to your portal here</p>
             </div>
-            <div class="col-md-5 col-sm-12 col-xs-12 login-form-2">
+            <div class="col-md-5 col-sm-12 col-xs-12 login-form-2 ">
+                <img src="../img/undraw_profile_pic_ic5t.svg" class="img">
                 <h3>Login </h3>
                 <form>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                        <input type="text" class="form-control" placeholder="Username *" value="" />
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                        <input type="password" class="form-control" placeholder=" Password *" value="" />
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btnSubmit" value="Login" />
