--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-overlay">
-    <div class="container login-container">
+    <div class="container-fluid login-container">
         <div class="row d-flex justify-content-center">
             <div class="col-md-5   login-form-1 d-none d-lg-block ">
 
