--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <h1>Welcome</h1>
                 <p> Sign in to your portal here</p>
             </div>
-            <div class="col-md-4 col-sm-10 col-xs-10 login-form-2 ">
+            <div class="col-md-4  login-form-2 ">
                 <img src="../img/undraw_profile_pic_ic5t.svg" class="img">
                 <h3>Login </h3>
                 <form>
