--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <title> Welcome Page</title>
 
     <!--Bootstrap CSS-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet " href="bootstrap-4.4.1-dist\css\bootstrap.css">
     <link rel="stylesheet" href="css\Main.css">
 
@@ -18,7 +19,7 @@
                 <h1>Welcome</h1>
                 <p> Sign in to your portal here</p>
             </div>
-            <div class="col-md-4  login-form-2 ">
+            <div class="col-md-4 col-sm-10 col-xs-8 login-form-2 ">
                 <img src="../img/undraw_profile_pic_ic5t.svg" class="img">
                 <h3>Login </h3>
                 <form>
