--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 <p> Sign in to your portal here</p>
             </div>
             <div class="col-md-4 col-sm-10 col-xs-8 login-form-2 ">
-                <img src="../img/undraw_profile_pic_ic5t.svg" class="img">
+                <img src="../img/avatar04.png" class="img">
                 <h3>Login </h3>
                 <form>
                     <div class="form-group">
